#PK-1837 Payment Fee Status column

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2081,7 +2081,7 @@
     "Enum:TransactionStatus.2": "失敗",
     "Enum:PaymentChannel.0": "綠界",
     "Enum:PaymentChannel.1": "Line Pay",
-    "Enum:PaymentChannel.2": "貨到付款"
-
+    "Enum:PaymentChannel.2": "貨到付款",
+    "PaymentFeeStatus": "金流費用設定"
   }
 }
