--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2074,6 +2074,7 @@
     "AdditionalFee": "Additional Fee",
     "TotalLogisticFee": "Total Logistic Fee",
     "NoFileChosen": " No file chosen",
-    "ValidityPeriod": "Validity Period"
+    "ValidityPeriod": "Validity Period",
+    "PaymentFeeStatus": "Payment Fee Status"
   }
 }
