Commit for Pk-1845

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2080,6 +2080,7 @@
     "Enum:PaymentChannel.0": "綠界",
     "Enum:PaymentChannel.1": "Line Pay",
     "Enum:PaymentChannel.2": "貨到付款",
-    "PaymentFeeStatus": "金流費用設定"
+    "PaymentFeeStatus": "金流費用設定",
+    "EdmList": "電子報"
   }
 }
