--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2094,6 +2094,8 @@
     "SameDayDelivery": "Same Day Delivery",
     "ShipmentType": "Shipment Type",
     "CodAmount": "Cod Amount",
-    "UploadFile": "Upload File"
+    "UploadFile": "Upload File",
+    "ChooseAnotherFile": "Choose Another File",
+    "TCatFileImport:NoRecords": "No records found. Either the file is empty or the records have already been imported."
   }
 }
