#PK-1872 Add back stock

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1603,10 +1603,14 @@
     "Enum:InventoryActionType.1": "Deduct Stock",
     "Enum:InventoryActionType.2": "Item Sold",
     "Enum:InventoryActionType.3": "Add-on Product Sold",
+    "Enum:InventoryActionType.4": "Item Unsold",
+    "Enum:InventoryActionType.5": "Add-on Product Unsold",
     "StockAdded": "Stock Added",
     "StockDeducted": "Stock Deducted",
     "ItemSold": "Item Sold: Order #{0}",
     "AddOnProductSold": "Add-on Product Sold: Order #{0}",
+    "ItemUnsold": "Item Unsold: Order #{0}",
+    "AddOnProductUnsold": "Add-on Product Unsold: Order #{0}",
     "AdjustStockAmount": "Amount",
     "NoStockAdjustmentDescription": "No stock changes have been logged for this item yet.",
     "Pikachu:InvalidInventoryStock": "The field '{field1}' can not be greater than '{field2}'.",
