Commit For Pk-1877

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2138,6 +2138,7 @@
     "LineTitle": "Line Title",
     "LineLink": "Line Link",
     "PleaseSelect": "Please Select",
-    "Minutes": "Minutes"
+    "Minutes": "Minutes",
+   
   }
 }
