Commit for Pk-1879

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -96,7 +96,7 @@
     "ChinaTrust": "中國信託",
     "ChooseGroupBuy": "選擇套用團購",
     "ChooseItem": "選擇商品",
-    "Closed": "關閉訂單",
+    "Closed": "訂單關閉",
     "Cm0001": "0001: 60cm",
     "Cm0002": "0002: 90cm",
     "Cm0003": "0003: 120cm",
@@ -2097,7 +2097,7 @@
     "OrderCompletedDueToInActivity": "訂單因閒置自動完成：{0} 運送狀態由 '{1}' 變更為 '{2}'",
     "OrderCompletedDueToInActivityTitle": "訂單因閒置自動完成",
     "EcPayLogisticUpdate": "綠界物流更新",
-    "Complete": "訂單關閉",
+    "Complete": " 訂單完成",
     "Banner": "橫幅圖",
     "Favicon": "網站圖示",
     "FacebookTitle": "Facebook 名稱/標題",
