Button text change

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2139,6 +2139,7 @@
     "LineLink": "Line Link",
     "PleaseSelect": "Please Select",
     "Minutes": "Minutes",
-   
+    "ManualBankTransfer": "Manual Bank Transfer",
+    "AddNewMailing": "Add New Mailing"
   }
 }
