--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2140,6 +2140,12 @@
     "PleaseSelect": "Please Select",
     "Minutes": "Minutes",
     "ManualBankTransfer": "Manual Bank Transfer",
-    "AddNewMailing": "Add New Mailing"
+    "AddNewMailing": "Add New Mailing",
+    "PikachuFileInput:DropFilesHere": "Drop files here or Click to browse",
+    "PikachuFileInput:DropFileHere": "Drop file here or Click to browse",
+    "PikachuFileInput:SupportedFiles": "Supported: {0}",
+    "PikachuFileInput:MaxSize": "Max Size: {0}MB",
+    "PikachuFileInput:InvalidFileSize": "File '{0}' exceeds the allowed maximum file size.",
+    "PikachuFileInput:InvalidFileExtension": "File '{0}' doesn't meet the allowed file type(s)."
   }
 }
