#PK-1816 Payout details UI updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1864,7 +1864,7 @@
 
     "Unknown": "Unknown",
     "Permission:TenantPayouts": "Tenant Payouts",
-    "Menu:TenantPayouts": "Tenant Payouts",
+    "Menu:PayoutManagement": "Payout Management",
     "TenantPayouts": "Tenant Payouts",
     "Email:LogisticsFee:Subject": "Logistics Fee Processing Summary",
     "Email:LogisticsFee:Greeting": "Dear {0},",
@@ -2103,17 +2103,17 @@
     "UploadFile": "Upload File",
     "ChooseAnotherFile": "Choose Another File",
     "TCatFileImport:NoRecords": "No records found. Either the file is empty or the records have already been imported.",
-    "PayoutFeeManagement": "Payout Fee Management",
+    "PayoutManagement": "Payout Management",
     "TenantManagement": "Tenant Management",
     "SelectTenantToViewPayoutFeeDetail": "Select a tenant to view payout fee details",
     "PaymentProviders": "Payment Providers",
     "SelectPaymentProviderToViewPaymentDetails": "Select a payment provider to view payout details",
     "BackToTenants": "Back to Tenants",
     "FeeAnalysisByYear": "Fee Analysis by Year",
-    "SelectYearToViewDetailedFeeBreakdown": "Select a year to view detailed fee breakdown",
+    "SelectYearToViewDetailedPayoutRecords": "Select a year to view detailed payout records",
     "BackToProviders": "Back to Providers",
     "PayoutDetails": "Payout Details",
-    "DetailedPayoutBreakdownAndMangement": "Detailed payout breakdown and management",
+    "TransactionRecordsAndPayoutManagementOperations": "Transaction records and payout management operations",
     "BackToYears": "Back to Years",
     "CurrentYear": "Current Year",
     "PreviousYear": "Previous Year",
@@ -2164,10 +2164,21 @@
     "PayoutDetails:TransferSelectedToWallet": "Transfer Selected to Wallet",
     "PayoutDetails:MarkSelectedAsPaid": "Mark Selected as Paid",
     "PayoutDetails:PaymentActionsOnlyAffectUnpaidRecords": "* Payment actions only affect unpaid records",
+    "PayoutDetails:SelectedRecords": "Selected Records",
     "OrderClosedShippingTitle": "Order Closed",
     "OrderClosedShipping": "Order closed due to overdue payment: Shipping Status changed from '{0}' to '{1}'.",
     "OrderClosedStatusTitle": "Order Closed",
-    "OrderClosedStatus": "Order closed due to overdue payment: Order Status changed from '{0}' to '{1}'."
-
+    "OrderClosedStatus": "Order closed due to overdue payment: Order Status changed from '{0}' to '{1}'.",
+    "TenantList": "Tenant List",
+    "PayoutByYear": "Payout by Year",
+    "AdditionalProviders": "Additional Providers",
+    "MoreProvidersWillBeAvailableSoon": "More providers will be available soon",
+    "ComingSoon": "Coming Soon",
+    "TotalFees": "Total Fees",
+    "Transactions": "Transactions",
+    "AvgFeeRate": "Avg Fee Rate",
+    "TransferToWallet": "Transfer to Wallet",
+    "MarkAsPaid": "Mark as Paid",
+    "PlatformFee": "Platform Fee"
   }
 }
