--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2137,6 +2137,45 @@
     "PayoutDetails:SelectedRecords": "匯出選取資料",
     "PayoutDetails:CurrentFilter": "匯出篩選資料",
     "PayoutDetails:AllData": "匯出所有資料",
-    "ApplyFilters": "套用篩選"
+    "ApplyFilters": "套用篩選",
+    "OrderCreationTime": "訂單建立時間",
+    "OrderAmount": "訂單金額",
+    "FeeRate": "手續費率",
+    "HandlingFee": "手續費",
+    "PlatformFee": "平台費",
+    "NetAmount": "撥款淨額",
+    "Unpaid": "未付款",
+    "TenantPayout:Active": "啟用中",
+    "ComingSoon": "即將推出",
+    "CurrentYear": "本年度",
+    "PreviousYear": "前一年度",
+    "Archive": "歷史資料",
+    "Dashboard": "儀表板",
+    "BackToTenants": "返回租戶",
+    "BackToProviders": "返回供應商",
+    "BackToYears": "返回年度選擇",
+    "PayoutDetails:BatchActions": "批次操作",
+    "SelectTenantToViewPayoutFeeDetail": "選擇租戶以查看支付詳情",
+    "SelectPaymentProviderToViewPaymentDetails": "選擇金流廠商以查看支付詳情",
+    "SelectYearToViewDetailedPayoutRecords": "選擇年份以查看詳細支付記錄",
+    "TransactionRecordsAndPayoutManagementOperations": "交易記錄與支付管理操作",
+    "UploadTCatFileTitleDescription": "上傳 T Cat 檔案以更新撥款資料",
+    "Import": "匯入",
+    "VerifyTCatFileAndImport": "驗證 T Cat 檔案並匯入",
+    "TCatFileImport:NoRecords": "未找到記錄。檔案可能為空，或記錄已經匯入。",
+    "ChooseAnotherFile": "選擇其他檔案",
+    "TotalFees": "總費用",
+    "Transactions": "交易",
+    "PaymentType": "支付類型",
+    "PayoutDetails:PaymentActionsOnlyAffectUnpaidRecords": "* 支付操作僅影響未付款記錄",
+    "ImportTCatFile": "匯入 T Cat 檔案",
+    "PayoutDetails:FeeSummary": "費用摘要 - {0}",
+    "AvgFeeRate": "平均費率",
+    "PrimaryPaymentProcessingProvider": "主要金流處理廠商",
+    "MoreProvidersWillBeAvailableSoon": "更多廠商即將上線",
+    "AdditionalProviders": "其他廠商",
+    "TenantActiveSince": "自{0}啟用",
+    "TenantPayoutTotalFees": "{0} 總費用",
+    "NumberOfTransactionsThisMonth": "{0} 筆本月交易"
   }
 }
