--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -4,8 +4,8 @@
     "LoginType": "登入類型",
     "Pikachu:EnterprisePurchaseCanOnlyUseSelfPickup": "企業採購只能使用自提",
     "ProductRankingCarouselModule": "商品排行模組",
-    "OrderInstruction": "訂購流程",
-    "OrderInstructionTitle": "流程簡介模組",
+    "OrderInstruction": "流程簡介模組",
+    "OrderInstructionTitle": "訂購流程",
     "CountdownTimer": "倒數模組",
     "GroupPurchaseOverview": "團購簡介模組",
     "BannerImages": "橫幅模組",
