--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -6,6 +6,8 @@
     "ProductRankingCarouselModule": "商品排行模組",
     "OrderInstruction": "流程簡介模組",
     "OrderInstructionTitle": "訂購流程",
+    "Order Instruction": "訂購流程",
+
     "CountdownTimer": "倒數模組",
     "GroupPurchaseOverview": "團購簡介模組",
     "BannerImages": "橫幅模組",
