--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2181,6 +2181,10 @@
     "TenantPayoutTotalFees": "{0} total fees",
     "NumberOfTransactionsThisMonth": "{0} transactions this month",
     "TenantActiveSince": "Active since {0}",
-    "訂購流程": "Order Instruction"
+    "訂購流程": "Order Instruction",
+    "Enum:TenantPaymentFee.0": "ECPay",
+    "Enum:TenantPaymentFee.1": "T-Cat",
+    "NoPayoutData": "No Records Found",
+    "NoPayoutDataDescription": "There is no data available at the moment."
   }
 }
