#PK-1824 UI optimization

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2185,6 +2185,8 @@
     "Enum:TenantPaymentFee.0": "ECPay",
     "Enum:TenantPaymentFee.1": "T-Cat",
     "NoPayoutData": "No Records Found",
-    "NoPayoutDataDescription": "There is no data available at the moment."
+    "NoPayoutDataDescription": "There is no data available at the moment.",
+    "PayoutDetails:Filters": "Filters",
+    "PayoutDetails:PaidOn": "Paid On: {0}"
   }
 }
