--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2190,6 +2190,9 @@
     "PayoutDetails:Filters": "Filters",
     "PayoutDetails:PaidOn": "Paid On: {0}",
     "PayoutDetails:InvalidFilterYear": "The {0} must be from {1}",
-    "Style": "Style"
+    "Style": "Style",
+    "Row.1": "Row 1",
+    "Row.2": "Row 2",
+    "Row.3": "Row 3"
   }
 }
