--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1679,6 +1679,7 @@
     "ShippingFee": "Shipping Fee",
     "(AddOnProduct)": "(Add-on Product)",
     "OnlyAvailable": "Only Available",
+    "OnlyAvailableTitle": "Only Available",
     "Last5DigitsOfBankAccount": "Last 5 Digits of Bank Account",
     "PaymentAmount": "Payment Amount",
     "ReceivedTime": "Received Time",
