--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2196,6 +2196,7 @@
     "Row.3": "第三排",
     "Records": "記錄",
     "OnlyAvailableTitle": "有效活動",
-    "OnlyAvailable": "有效"
+    "OnlyAvailable": "有效",
+    "Budget": "預算"
   }
 }
