--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -2197,6 +2197,41 @@
     "Records": "記錄",
     "OnlyAvailableTitle": "有效活動",
     "OnlyAvailable": "有效",
-    "Budget": "預算"
+    "Budget": "預算",
+    "Pikachu:LogoIsRequired": "必須上傳 Logo",
+    "ZipCodeisrequiredforSelfPickup": "自取需填寫取件郵遞區號。",
+    "CityisrequiredforSelfPickup": "自取需填寫取件城市。",
+    "AddressisrequiredforSelfPickup": "自取需填寫取件地址。",
+    "PleaseEnterThresholdAmount": "請輸入免運門檻金額。",
+    "InvalidFileType": "檔案類型無效。",
+    "Pikachu:CanNotAddMoreThan20Modules": "無法新增超過 20 個模組。",
+    "Cannotaddmore1image": "無法新增超過 1 張圖片。",
+    "SelectOnly1LogoUpload": "只能選擇 1 個 Logo 上傳。",
+    "Logouploadedsuccessfully!": "Logo 上傳成功！",
+    "Somethingwentwrongduringcropping/upload.": "裁切或上傳過程發生錯誤。",
+    "SelectOnly1BannertoUpload": "請僅選擇 1 張 Banner 上傳。",
+    "SomethinghappendwrongProductmoduleisnotSave": "發生錯誤，商品模組未儲存。請重新新增商品價格與屬性後再儲存。",
+    "Pikachu:ColorSchemeRequired": "必須選擇配色方案。",
+    "Pikachu:GroupBuyConditionRequired": "必須設定團購須知。",
+    "Pikachu:ExchangePolicyRequired": "必須填寫退換貨政策。",
+    "OnlyOneB2COrC2CCanBeEnabledFamilyMart": "全家 B2C 或 C2C 僅能擇一啟用。",
+    "SizeCannotbeempty": "尺寸不能為空。",
+    "PaymentMethodCannotbeempty": "代收款方式不能為空。",
+    "PleaseEnterAmount": "請輸入金額。",
+    "Enteramountisgreaterthanorderamount": "輸入金額大於訂單金額",
+    "PleaseSelectItemsToExchange": "請選擇要換貨的商品。",
+    "InvalidRecipients": "收件人無效",
+    "InvalidSendTime": "發送時間無效。",
+    "InvalidGroupBuys": "團購資訊無效",
+    "Pikachu:GroupBuyModuleCannotBeEmpty": "團購模組不能為空。",
+    "ThefieldProductCategoryisrequired": "必須填寫商品分類欄位。",
+    "ThefieldArticlePageHtmlisrequired": "必須填寫文章頁面 HTML 欄位。",
+    "ThefieldArticlePageTitleisrequired": "必須填寫頁面模組類型欄位。",
+    "ThefieldTitleisrequiredinGroupPurchaseOverviewModule": "團購總覽模組必須填寫標題。",
+    "ThefieldSubTitleisrequiredinGroupPurchaseOverviewModule": "團購總覽模組必須填寫副標題。",
+    "FooterSettingsUpdated": "底部欄已成功更新！",
+    "CODPaymentMethod": "代收款方式"
+
+
   }
 }
